# EmbedRTOS

./: CMakeLists.txt  Makefile  README.md  main.c
simulator/: virt_board.c  virt_board.h  visualization.c
src/algorithms/: kalman_filter.c  kalman_filter.h
src/app/: comm_task.c  monitor_task.c  sensor_task.c  tasks.h
src/hal/: hal.c  hal.h  virt_periph.c  virt_periph.h
src/kernel/: queue.c  queue.h  scheduler.c  scheduler.h  semaphore.c  semaphore.h
src/ota/: bootloader.c  bootloader.h  ota_manager.c  ota_manager.h
src/protocols/: comm_protocol.c  comm_protocol.h
src/utils/: circular_buffer.c  circular_buffer.h  logger.c  logger.h
tests/: test_config.h  test_runner.c  test_utils.c
